--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,92 @@
     color: var(--main-color);
 }
 
+
+/*---------- Header ----------*/
+.main-container header {
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+
+  }
+  
+
+
+  header h1 {
+    padding-right: 30px;
+    font-size: 20px;
+  }
+  
+  header p {
+    padding-top: 0;
+  }
+  
+  /*---------- Form ----------*/
+
 body {
     display: flex;
     justify-content: center;
 }
+
+/****** filters *******/
+
+.filters {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: auto;
+    margin-bottom: 20px;
+    width: 96%;
+  }
+  
+  .filters h2 {
+    margin-right: 20px;
+    margin-bottom: 0;
+  }
+  
+  .filters ul {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 0;
+    list-style: none; 
+  }
+  
+  .filters li {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+    margin-top: 10px;
+    border: 2px solid #f2f2f2;
+    border-radius: 30px;
+    border-left: none; 
+  }
+  
+  .filters li:hover,
+  .filters li:focus {
+    border-color: #Deebff;
+    cursor: pointer;
+    transition-duration: 500ms;
+    background-color: #deebff;
+    color: #0065fc;  
+  }
+  
+  .filters i {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    background-color: #deebff;
+    color: #0065fc;      
+  }
+  
+  .filters_text {
+    padding: 0 20px 0 10px;
+    font-size: 16px;
+    font-weight: bold;
+  }
 
 .main-container {
     width: 100%;
@@ -76,6 +158,19 @@ a {
     width: 65%;
 }
 
+.hebergements-cards img {
+    width: 66%;
+    height: 136px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+.hebergements-cards .card {
+    display: flex;
+    justify-content: space-between;
+   
+    
+}
 /****** Populaires ***********/
 .populaires {
     width: 32%;
@@ -121,8 +216,16 @@ a {
     margin-bottom: 5px;
 }
 
+/****** activites *******/
+.activites {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
-
+.activites-cards img {
+    
+}
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
