--- a/css/style.css
+++ b/css/style.css
@@ -218,10 +218,13 @@ a {
 .activites {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
+.activites-cards {
+    display: flex;
+}
 .activites-cards img {
+ 
     
 }
 
