--- a/css/style.css
+++ b/css/style.css
@@ -14,29 +14,80 @@
 }
 
 
-/*---------- Header ----------*/
-.main-container header {
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-
-  }
-  
-  header h1 {
-    padding-right: 30px;
-    font-size: 20px;
-  }
-  
-  header p {
-    padding-top: 0;
-  }
-  
-  /*---------- Form ----------*/
-
 body {
     display: flex;
     justify-content: center;
 }
+img {
+    width: 100%;
+}
+
+/*---------- Header ----------*/
+header {
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+  }
+
+header img {
+  width: 100px;
+  padding-top: 10px;
+  }
+  
+header h1 {
+    padding-right: 30px;
+    font-size: 20px;
+  }
+  
+header p {
+    padding-top: 0;
+  }
+
+header ul {
+    display: flex;
+    flex-wrap:wrap;
+    gap: 50px;
+    list-style: none;
+    align-content: center;
+  }
+
+header li a:hover,
+        li a:focus {
+      border-top: #0065FC solid 2px;
+      color: #0065FC;
+  }
+  
+  /*---------- Form ----------*/
+form {
+    display: flex;
+    margin: auto;
+    margin-bottom: 10px;
+    width: 100%;
+  }
+
+  /*---------- Îcon localisation ----------*/
+.fa-location-dot {
+    border-radius: 20px 0 0 20px;
+    padding: 17px 17px;
+    font-size: 16px;
+    background-color: #f2f2f2;  
+    color: black;  
+  }
+
+  /*---------- Input search ----------*/
+.search_bar {
+    border-radius: 0px 20px 20px 0;               
+    border: 1px solid #f2f2f2;
+    width: 150px;   
+    background-color: #0065fc;  
+  }
+
+.search_bar::placeholder {
+    font-size: 16px;
+    font-weight: bold;
+    color: black;                 
+  }
+
 
 /****** filters *******/
 
