--- a/css/style.css
+++ b/css/style.css
@@ -78,14 +78,19 @@ form {
 .search_bar {
     border-radius: 0px 20px 20px 0;               
     border: 1px solid #f2f2f2;
-    width: 150px;   
-    background-color: #0065fc;  
+    width: 120px;   
+    background-color: #0065fc;
+    color: white;  
+    aling-self: center;
   }
 
 .search_bar::placeholder {
-    font-size: 16px;
-    font-weight: bold;
-    color: black;                 
+    color: black; 
+    text-align: center;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;                
   }
 
 
