--- a/css/style.css
+++ b/css/style.css
@@ -219,19 +219,20 @@ a {
     width: 65%;
 }
 
-.hebergements-cards img {
-    width: 66%;
-    height: 136px;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-}
 
-.hebergements-cards .card {
-    display: flex;
-    justify-content: space-between;
-   
+
+.hebergements-cards img {
+    height: 136px;
+    border-radius: 20px;
     
 }
+
+.hebergements-cards  {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;   
+}
+
 /****** Populaires ***********/
 .populaires {
     width: 32%;
@@ -278,17 +279,22 @@ a {
 }
 
 /****** activites *******/
-.activites {
+
+.Activites {
     display: flex;
     flex-direction: column;
 }
 
-.activites-cards {
+.Activites-card {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
-.activites-cards img {
- 
-
+.Activites-card img  {
+    width: 320px;
+    height: 420px;
+    border-radius: 20px 20px 0 0;
+    gap: 2%;
 }
 
 footer {
