--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,9 @@ header li a:hover,
   /*---------- Form ----------*/
 form {
     display: flex;
-    align-items: center;
-    
+	margin: -1px 0px;
+	height: 50px;
+	justify-content: flex-start;
   }
 
   /*---------- Îcon localisation ----------*/
@@ -74,32 +75,29 @@ form {
     border-radius: 15px 0 0 15px;
     justify-content: center;
     align-items: center;
-    height: 49px;
     color: black;
   }
 
   /*---------- Input search ----------*/
 .search_bar {
     background-color: #0065fc;
-    color: white;  
-    aling-self: center;
-    width: 132px;
-    height: 49px;
     border-radius: 0, 15px, 15px, 0;
     gap: 10px;
+    color: white;
+	border: 0;
+	border-radius: 0 15px 15px 0;
+	padding: 0 15px;
+	width: 132px;
+	cursor: pointer;
 }
 
-.search_bar::placeholder {
-    color: var(--Black, #000);
-    text-align: center;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    width: 50px;
-    height: 49px;
+.search_bar:placeholder {
+    color: black;
+    font-weight: bolder;
   }
-
+fa-magnifying-glass{
+	display: none;
+}
 
 /****** filters *******/
 
@@ -109,7 +107,7 @@ form {
     flex-wrap: wrap;
     margin: auto;
     margin-bottom: 20px;
-    width: 96%;
+    width: 100%;
   }
   
   .filters h2 {
@@ -151,7 +149,6 @@ form {
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    background-color: #deebff;
     color: #0065fc;      
   }
   
