--- a/css/style.css
+++ b/css/style.css
@@ -108,41 +108,44 @@ fa-magnifying-glass{
     margin: auto;
     margin-bottom: 20px;
     width: 100%;
+    
   }
   
-  .filters h2 {
+.filters h2 {
     margin-right: 20px;
-    margin-bottom: 0;
   }
   
-  .filters ul {
+.filters ul {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     padding: 0;
-    list-style: none; 
+    list-style: none;
+    width: Auto; 
+    gap: 15px;
   }
   
-  .filters li {
+.filters li {
     display: flex;
     align-items: center;
-    margin-right: 20px;
+    padding-right: 20px;
     margin-top: 10px;
     border: 2px solid #f2f2f2;
     border-radius: 30px;
     border-left: none; 
+    
   }
   
-  .filters li:hover,
-  .filters li:focus {
+.filters li:hover,
+.filters li:focus {
     border-color: #Deebff;
     cursor: pointer;
     transition-duration: 500ms;
     background-color: #deebff;
     color: #0065fc;  
-  }
+}
   
-  .filters i {
+.filters i {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -150,13 +153,13 @@ fa-magnifying-glass{
     width: 50px;
     height: 50px;
     color: #0065fc;      
-  }
+}
   
-  .filters_text {
+.filters_text {
     padding: 0 20px 0 10px;
     font-size: 16px;
     font-weight: bold;
-  }
+}
 
 .main-container {
     width: 100%;
