--- a/css/style.css
+++ b/css/style.css
@@ -34,15 +34,6 @@ header img {
   padding-top: 10px;
   }
 
-header h1 {
-    padding-right: 30px;
-    font-size: 20px;
-  }
-
-header p {
-    padding-top: 0;
-  }
-
 header ul {
     display: flex;
     flex-wrap:wrap;
@@ -57,12 +48,26 @@ header li a:hover,
       color: #0065FC;
   }
 
+
+.header-text h1 {
+    padding-right: 30px;
+    font-size: 20px;
+    margin-top: 40px;
+    margin-bottom: 0;
+  }
+
+.header-text p {
+    margin-top: 0;
+  }
+
+
   /*---------- Form ----------*/
 form {
     display: flex;
-	margin: -1px 0px;
-	height: 50px;
+	margin-top: 30px;
+	height: 45px;
 	justify-content: flex-start;
+
   }
 
   /*---------- Îcon localisation ----------*/
