--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,6 @@ header li a:hover,
 
 .header-text p {
     margin-top: 0;
-    font-size:20px;
   }
 
   /*---------- Form ----------*/
@@ -117,18 +116,16 @@ fa-magnifying-glas{
 	color: #0065fc;
 }
 .infos-icon i {
-	height: 25px;
-	width: 25px;
-	border-radius: 25px;
-	border: 1px solid #f2f2f2;
-	justify-content: center;
-	align-items: center;
-	padding: 9px 0 0 9px;
+    border: 2px solid #f2f2f2;
+    border-radius: 20px;
+    padding: 5px 10px; 
 }
+
 .infos-txt {
 	padding-left: 10px;
 	padding-bottom: 35px;
 }
+
 /****** filters *******/
 
 .filters {
