--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ fa-magnifying-glas{
 .infos-icon i {
     border: 2px solid #f2f2f2;
     border-radius: 30px;
-    
+
     padding: 5px 10px; 
 }
 
@@ -156,11 +156,11 @@ fa-magnifying-glas{
 
 .filters li {
     display: flex;
-    align-items: center;
-    padding: 20px;
-    border: 1px solid #f2f2f2;
-    border-radius: 28px;
-    gap: 10px;@
+    gap: 10px;
+    border: 3px  solid #F2F2F2;
+    border-radius: 40px;
+    padding: 20px 40px 10px 20px; 
+    font-weight: 700;
 
   }
 
@@ -319,10 +319,12 @@ a {
 
 .Activites-card {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 20px;
+    gap: 40px;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
 }
+
 
 .Activites-card img  {
     width: 300px;
@@ -346,6 +348,12 @@ footer {
     padding-left: 40px;
     gap: 7%;
     height: 200px;
+}
+
+footer ul{
+    padding: 0;
+   margin: 0;
+  list-style-type: none;
 }
 
 footer section {
