--- a/css/style.css
+++ b/css/style.css
@@ -149,17 +149,18 @@ fa-magnifying-glas{
     align-items: center;
     flex-wrap: wrap;
     padding: 0;
-    list-style: none;
-    width: Auto; 
-    gap: 15px;
+    list-style: none; 
+    gap: 10px;
   }
 
 .filters li {
     display: flex;
+    align-items: center;
+    padding: 10px;
+    border-radius: 40px;
     gap: 10px;
     border: 3px  solid #F2F2F2;
-    border-radius: 40px;
-    padding: 20px 40px 10px 20px; 
+    padding: 10px 30px 10px 20px; 
     font-weight: 700;
   }
 
