--- a/css/style.css
+++ b/css/style.css
@@ -57,15 +57,17 @@ header li a:hover,
   }
 
 .header-text p {
-    margin-top: 0;
+    margin-top: 5px;
   }
 
   /*---------- Form ----------*/
 form {
     display: flex;
-	margin-top: 30px;
-	height: 45px;
-	justify-content: flex-start;
+    height: 49px;
+    margin-top: 39px;
+    padding: 15px, 16px, 15px, 16px;
+    border-radius: 0px, 15px, 15px, 0px;
+    border: 1px;
   }
 
   /*---------- Îcon localisation ----------*/
@@ -73,7 +75,7 @@ form {
     display: flex;
     width: 50px;
     margin: -1px;
-    font-size: 20px;
+    font-size: 18px;
     background-color: #f2f2f2;
     border-radius: 15px 0 0 15px;
     justify-content: center;
@@ -90,16 +92,15 @@ form {
 	border: 0;
 	border-radius: 0 15px 15px 0;
 	padding: 0 15px;
-	width: 132px;
+	width: 122px;
 	cursor: pointer;
 }
 
 form Input {
     color: black;
     font-weight: bolder;
-    width: 200px;
+    width: 150px;
     padding-left: 20px;
-
 }
 
 fa-magnifying-glas{
