--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@
 body {
     display: flex;
     justify-content: center;
+    padding-top: 0;
 }
+
 img {
     width: 100%;
 }
@@ -42,7 +44,7 @@ header {
   }
 
 header img {
-  width: 100px;
+  width: 80px;
   padding-top: 10px;
   }
 
@@ -62,8 +64,7 @@ header li a:hover,
 
 
 .header-text h1 {
-    padding-right: 30px;
-    margin-top: 40px;
+    margin-top: 25px;
     margin-bottom: 0;
   }
 
@@ -75,10 +76,7 @@ header li a:hover,
 form {
     display: flex;
     height: 49px;
-    margin-top: 39px;
-    padding: 15px, 16px, 15px, 16px;
-    border-radius: 0px, 15px, 15px, 0px;
-    border: 1px;
+    margin-top: 35px;  
   }
 
   /*---------- Îcon localisation ----------*/
@@ -135,7 +133,6 @@ fa-magnifying-glas{
 .infos-icon i {
     border: 2px solid #f2f2f2;
     border-radius: 30px;
-
     padding: 5px 10px; 
 }
 
@@ -149,11 +146,9 @@ fa-magnifying-glas{
 .filters {
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
-    margin: auto;
     margin-bottom: 20px;
+    margin-top: 20px;
     width: 100%;
-
   }
 
 .filters h2 {
@@ -172,7 +167,6 @@ fa-magnifying-glas{
 .filters li {
     display: flex;
     align-items: center;
-    padding: 10px;
     border-radius: 40px;
     gap: 10px;
     border: 3px  solid #F2F2F2;
