--- a/css/style.css
+++ b/css/style.css
@@ -25,15 +25,15 @@ img {
 }
 /*---------- titles-sizes ----------*/
 h1 {
-    font-size: 28px;
+    font-size: 26px;
   }
   
 h2 {
-    font-size: 23px;
+    font-size: 21px;
   }
   
 h3 {
-    font-size: 18px;
+    font-size: 16px;
   }
 
 /*---------- Header ----------*/
@@ -60,7 +60,7 @@ header li a:hover,
 header li a:focus {
       border-top: #0065FC solid 2px;
       color: #0065FC;
-      padding: 20px;
+      padding-top: 20px;
   }
 
 
@@ -117,9 +117,10 @@ form Input {
     font-weight: 700;
 }
 
-fa-magnifying-glas{
+.search_bar i {
 	display: none;
 }
+
 /*----------info-logement------*/
 
 .infos-logements {
@@ -188,7 +189,8 @@ fa-magnifying-glas{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #0065fc;      
+    color: #0065fc; 
+    font-size: 19px;     
 }
 
 .filters_text {
@@ -346,11 +348,12 @@ a {
     list-style-type: none;
 }
 
-
 .Activites-card img  {
     width: 300px;
     height: 380px;
     border-radius: 20px 20px 0 0;
+    margin: 0;
+	padding: 0;
 
 }
 
