--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,6 @@ header li a:focus {
       padding-top: 20px;
   }
 
-
 .header-text h1 {
     margin-top: 25px;
     margin-bottom: 0;
@@ -113,6 +112,7 @@ form Input {
     width: 150px;
     padding-left: 20px;
 }
+
 .placeholder {
     font-weight: 700;
 }
@@ -128,6 +128,7 @@ form Input {
 	display: flex;
 	align-items: baseline;
 }
+
 .infos-icon {
 	color: #0065fc;
 }
@@ -171,7 +172,7 @@ form Input {
     align-items: center;
     border-radius: 40px;
     gap: 10px;
-    border: 3px  solid #F2F2F2;
+    border: 2px solid #F2F2F2;
     padding: 10px 30px 10px 20px; 
     font-weight: 700;
   }
@@ -370,8 +371,10 @@ footer {
     background: var(--main-bg-color);
     margin-top: 60px;
     padding-left: 40px;
-    gap: 15%;
     height: 190px;
+    align-items: flex-start;
+    gap: 30px;
+    align-self: stretch;
 }
 
 footer ul{
