--- a/css/style.css
+++ b/css/style.css
@@ -339,18 +339,19 @@ a {
 .Activites {
     display: flex;
     flex-direction: column;
+    padding-top: 20px;
 }
 
 .Activites-card {
     display: flex;
-    gap: 40px;
+    gap: 30px;
     padding: 0;
     margin: 0;
     list-style-type: none;
 }
 
 .Activites-card img  {
-    width: 300px;
+    width: 310px;
     height: 380px;
     border-radius: 20px 20px 0 0;
     margin: 0;
@@ -373,7 +374,7 @@ footer {
     padding-left: 40px;
     height: 190px;
     align-items: flex-start;
-    gap: 30px;
+    gap: 150px;
     align-self: stretch;
 }
 
@@ -427,6 +428,8 @@ footer li {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
+
+  
 }
 
 /* Small devices (phones, less than 768px) */
