--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@
 body {
     display: flex;
     justify-content: center;
-    padding-top: 0;
+    max-width: 1440px;
+    margin-auto;
 }
 
 img {
@@ -202,7 +203,6 @@ form Input {
 
 .main-container {
     width: 100%;
-    max-width: 1440px;
     padding: 0 50px;
     box-sizing: border-box;
 }
@@ -370,8 +370,8 @@ a {
 footer {
     display: flex;
     background: var(--main-bg-color);
-    margin-top: 60px;
-    padding-left: 40px;
+    margin-top: 50px;
+    padding-left: 20px;
     height: 190px;
     align-items: flex-start;
     gap: 150px;
@@ -385,11 +385,12 @@ footer ul{
 }
 
 footer h3 {
-    margin-top: 35px;
+    margin-top: 25px;
+    padding-left: 20px;
 }
 
 footer li {
-    margin: 5px;
+    margin: 15px;
 
 }
 
@@ -434,6 +435,12 @@ footer li {
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
-    /* ... */
+ /* ... */
+ body,
+ .Populaires ,
+ .activites {
+    flex-direction: column;
+ }
 }
+
 	
