--- a/css/style.css
+++ b/css/style.css
@@ -407,9 +407,9 @@ footer li {
         flex-direction: column;
     }
 
-    .hebergements-card {
+    .hebergements {
         width: 100%;
-        display:flex;
+       
         align-item: center;
     }
 
@@ -436,13 +436,16 @@ footer li {
         font-size: 13px;
     }
 
-  
+    .activités-cards a {
+        width: 30%;
+    }
+
 }
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
  /* ... */
-
+  
 
 }
 
