--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@ a {
 .Activites-card .card h3 {
     padding-left: 25px;
 }
-oter {
+footer {
     display: flex;
     background: var(--main-bg-color);
     margin-top: 30px;
