--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,8 @@ header ul {
     align-content: center;
 }
 
-header li a:hover,
-header li a:focus {
+header li :hover,
+header li :focus {
     border-top: #0065FC solid 3px;
     color: #0065FC;
     padding-top: 20px;
@@ -451,6 +451,10 @@ footer li {
 
 
 @media (max-width: 1024px) {
+
+    .filters ul {
+        flex-wrap: nowrap;
+    }
     .hebergements-and-populaires {
         flex-direction: column;
         justify-content: center;
@@ -504,6 +508,9 @@ footer li {
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
  /* ... */
+ .main-container {
+    padding: 0px;
+ }
  
     header {
         display:unset;
@@ -516,29 +523,27 @@ footer li {
   
     header ul {
         display: flex;
-        justify-content:space-between;
+        justify-content:space-evenly;
         flex-direction: row;
         padding: 0px;
+        border-top: none;
     }
     
     header li { 
         display:flex;
         flex-direction:row;
-        border-bottom: 2px solid transparent;
         padding: 30px;
+        border-top: unset;
     }
-
-    header li:hover,
-    header li:focus {
-      border-bottom-color: #0065fc ;
-     
-      cursor: unset;
+    header li a:hover,
+    header li a:focus {
+        border-bottom: #0065FC solid 3px;
     }
     
     header li a:hover,
     header li a:focus {
-        border-top: unset;
-    }
+    border-top: none;
+}
   
     form {
       Padding-top: 20px;
@@ -575,6 +580,8 @@ footer li {
   
     .filters ul {
       flex-wrap: wrap;
+      gap: 0px;
+
     }
   
     .filters li {
@@ -662,13 +669,13 @@ footer li {
       justify-content:space-around;
       gap: 1px;
       margin-bottom: 20px;
-      padding:0;
+      padding:30px;
       height: 460px;
     }
   
     footer section {
       margin: 0;
-      padding-left: 40px;
+    
     }
 }
   
