--- a/css/style.css
+++ b/css/style.css
@@ -38,18 +38,18 @@ h4 {
   }
 
 /*---------- Header ----------*/
-header {
+nav {
     margin: auto;
     display: flex;
     justify-content: space-between;
   }
 
-header img {
+nav img {
   width: 80px;
   padding-top: 10px;
 }
 
-header ul {
+/* header ul {
     display: flex;
     flex-wrap:wrap;
     gap: 50px;
@@ -62,7 +62,12 @@ header li :focus {
     border-top: #0065FC solid 3px;
     color: #0065FC;
     padding-top: 20px;
-}
+} */
+nav {
+    display: flex;
+    list-style-type : none;
+    justify-content: space-between;
+  }
 
 .header-text h1 {
     margin-top: 25px;
@@ -535,7 +540,7 @@ footer li {
         text-align:center;
     }
   
-    header ul {
+    /* header ul {
         display: flex;
         margin-top: 40px;
         gap: unset;
@@ -553,8 +558,38 @@ footer li {
         border-bottom: #0065FC solid 3px;
         padding-bottom: 20px;
         border-top: none;
-    }
+    } */
    
+    nav {
+        flex-direction: column;
+        gap: 50px;
+      }
+    
+      nav a {
+        border-top: none;
+      }
+    
+      nav ul {
+        
+        display: flex;
+        list-style-type: none;
+        justify-content: space-between;
+        padding-left: 0;
+        text-align: center;
+      }
+      }
+    
+      nav li { 
+        width: 100%;
+        border-bottom: 2px solid transparent;
+        padding: 30px;
+      }
+      
+      nav li:hover,
+      nav li:focus {
+        border-bottom-color: #0065fc ;
+      }
+      
     form {
         display:flex;
         justify-content: center;
